--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/shuen-yasui/CRUD-03-MemoAppMySQL#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "mysql": "^2.17.1",
     "pug": "^2.0.4"
